# streaksight

./: .gitignore  .prettierignore  .prettierrc  CONNECTOR.md  LICENSE  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: LocalFileCSVConnector.js  LocalFileJSONConnector.js  lib.rs  main.rs  query_builder.rs  runtime.js
src/lib/components/query-builder/: ConnectorDialog.svelte  FitViewHelper.svelte  NodeListItem.svelte  QueryBuilder.svelte  TableDetailsDialog.svelte
src/lib/components/query-builder/nodes/: AggregationNode.svelte  BarChartNode.svelte  FilterNode.svelte  LimitNode.svelte  LineChartNode.svelte  PieChartNode.svelte  QueryNode.svelte  SelectNode.svelte  SortNode.svelte  TableNode.svelte
src/lib/components/query-builder/settings/: AggregationNodeSettings.svelte  BarChartNodeSettings.svelte  FilterNodeSettings.svelte  LimitNodeSettings.svelte  LineChartNodeSettings.svelte  PieChartNodeSettings.svelte  SelectNodeSettings.svelte  SortNodeSettings.svelte
src/lib/components/query-builder/views/: BarChart.svelte  LineChart.svelte  PieChart.svelte  TableView.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/pagination/: Pagination.svelte
src/lib/types/: connector.ts
src/routes/: +page.svelte  layout.css
